--- a/app/Resources/views/course_info/view/dark_student_equipments.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_equipments.html.twig
@@ -6,47 +6,37 @@
         <h1 id="equipments-section" class="text-shadow my-2">{{ 'app.view.student.tabs.equipments' | trans   }}</h1>
 
         {% if courseInfo.courseResourceEquipments is not empty %}
+            <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.objectives.tutoring_resources_list' | trans | upper }}</h5>
             <div class="row">
-                <table class="table table-dark">
-                    <thead>
-                    <tr>
-                        <th class="text-left">{{ 'app.view.student.equipments.list' | trans }}</th>
-                        <th class="text-left">{{ 'app.view.student.equipments.description' | trans }}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for resourceEquipment in courseInfo.courseResourceEquipments %}
-                        <tr>
-                            <td class="text-left">{{ resourceEquipment.equipment.label }}</td>
-                            <td class="text-left">{{ resourceEquipment.description|humanizeEmptyData() }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                {% for resourceEquipment in courseInfo.courseResourceEquipments %}
+                    <div class="col-md-4 d-flex align-items-center">
+                        <i class="fas fa-2x fa-border rounded-circle fa-pencil-ruler p-2"></i>
+                        <div class="p-1">
+                            <p class="m-0">{{ resourceEquipment.equipment.label }}</p>
+                            <small class="m-0 font-italic">
+                                {{ resourceEquipment.description|humanizeEmptyData() }}
+                            </small>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         {% endif %}
 
         {% if courseInfo.educationalResources is not empty or
             courseInfo.bibliographicResources is not empty %}
-            <div class="row">
+            <div class="mt-3">
                 {% if courseInfo.educationalResources is not empty %}
-                    <div class="col-6">
-                        <dl>
-                            <dt>{{ 'app.view.student.equipments.educational_resources' | trans }}</dt>
-                            <dd>
-                                {{ courseInfo.educationalResources | humanizeEmptyData() | purify }}
-                            </dd>
-                        </dl>
+                    <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.equipments.educational_resources' | trans | upper }}</h5>
+                    <div>
+                        {{ courseInfo.educationalResources | humanizeEmptyData() | purify }}
                     </div>
                 {% endif %}
                 {% if courseInfo.bibliographicResources is not empty %}
-                    <div class="col-6">
-                        <dl>
-                            <dt>{{ 'app.view.student.equipments.bibliographic_resources' | trans }}</dt>
-                            <dd>
-                                {{ courseInfo.bibliographicResources | humanizeEmptyData() | purify }}
-                            </dd>
-                        </dl>
+                    <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.equipments.bibliographic_resources' | trans | upper }}</h5>
+                    <div>
+
+                        {{ courseInfo.bibliographicResources | humanizeEmptyData() | purify }}
+
                     </div>
                 {% endif %}
             </div>
