--- a/app/Resources/views/course_info/view/dark_student_info.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_info.html.twig
@@ -1,25 +1,13 @@
 {%
     if courseInfo.agenda is not empty or
-    courseInfo.organization is not empty or
-    courseInfo.mccAdvice is not null or
-    courseInfo.closingRemarks is not empty or
-    courseInfo.closingVideo is not empty
+    courseInfo.organization is not empty
 %}
     <hr class="bg-dark horizontal-separator">
     <div class="px-4">
-        <h1 id="info-section" class="text-shadow my-3">{{ 'app.view.student.tabs.info' | trans   }}</h1>
-        {% if courseInfo.mccAdvice is not null %}
-            <div class="row">
-                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.evaluation' | trans | upper }}</h5>
-                <div>
-                    {{ courseInfo.mccAdvice | humanizeEmptyData() | purify }}
-                </div>
-            </div>
-        {% endif %}
-
+        <h1 id="info-section" class="text-shadow my-3">{{ 'app.view.student.tabs.info' | trans }}</h1>
         {% if courseInfo.agenda is not empty %}
             <div class="row">
-                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.agenda' | trans }}</h5>
+                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.agenda' | trans | upper }}</h5>
                 <div>
                     {{ courseInfo.agenda | humanizeEmptyData() | purify }}
                 </div>
@@ -28,24 +16,10 @@
 
         {% if courseInfo.organization is not empty %}
             <div class="row">
-                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.organization' | trans }}</h5>
+                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.organization' | trans | upper }}</h5>
                 <div>
                     {{ courseInfo.organization | humanizeEmptyData() | purify }}
                 </div>
-            </div>
-        {% endif %}
-
-        {% if courseInfo.closingRemarks is not empty %}
-            <div class="row">
-                <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.closing_remarks' | trans }}</h5>
-                <div>
-                    {{ courseInfo.closingRemarks | humanizeEmptyData() | purify }}
-                </div>
-                {% if courseInfo.closingVideo is not empty %}
-                    <div class="embed-responsive embed-responsive-16by9">
-                        {{ courseInfo.closingVideo|raw  }}
-                    </div>
-                {% endif %}
             </div>
         {% endif %}
     </div>
