--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -14,10 +14,13 @@
 {% block content %}
     <div class="container-fluid p-0" style="background-color: black">
         {% include 'course_info/view/dark_student_presentation.html.twig' %}
+        {% include 'course_info/view/dark_student_prerequisites.html.twig' %}
         {% include 'course_info/view/dark_student_objectives.html.twig' %}
         {% include 'course_info/view/dark_student_activities.html.twig' %}
+        {% include 'course_info/view/dark_student_evaluation.html.twig' %}
         {% include 'course_info/view/dark_student_equipments.html.twig' %}
         {% include 'course_info/view/dark_student_info.html.twig' %}
+        {% include 'course_info/view/dark_student_closing_remarks.html.twig' %}
     </div>
 {% endblock %}
 
