--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -24,7 +24,7 @@
         </div>
         #} -->
         <div class="form-group">
-            {{ form_row(form.level, {label_attr: {class: 'required'}}) }}
+            {{ form_row(form.levels, {label_attr: {class: 'required'}}) }}
         </div>
 
     </div>
