--- a/app/Resources/views/course_info/view/dark_student_activities.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_activities.html.twig
@@ -6,34 +6,25 @@
             {% if not loop.first %}
                 <hr class="bg-dark horizontal-separator" style="height: 5px;">
             {% endif %}
-            <div class="row">
-                <h4 class="text-shadow">{{ section.title }}</h4>
-                <table class="table table-dark">
-                    <thead>
-                    <tr>
-                        <th class="text-left">{{ 'app.view.student.activities.title' | trans }}</th>
-                        <th class="text-left">{{ 'app.view.student.activities.type' | trans }}</th>
-                        <th class="text-left">{{ 'app.view.student.activities.mode' | trans }}</th>
-                        <th class="text-center">{{ 'app.view.student.activities.evaluable' | trans }}</th>
-                        <th class="text-center">{{ 'app.view.student.activities.evaluation_rate' | trans }}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for sectionActivity in section.courseSectionActivities %}
-                        <tr>
-                            <td class="text-left">{{ sectionActivity.activity.label }}</td>
-                            <td class="text-left">{{ sectionActivity.activityType }}</td>
-                            <td class="text-left">{{ sectionActivity.activityMode }}</td>
-                            <td class="text-center">
-                                {% if sectionActivity.evaluable %}
-                                    <span class="badge badge-danger rounded">{{ (sectionActivity.evaluationCt ? 'ct' : 'cc') | trans }}</span>
-                                {% endif %}
-                            </td>
-                            <td class="text-center">{{ sectionActivity.evaluationRate }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+            <h4>{{ section.title }}</h4>
+            <div class="mt-2">
+                {% set activity = section.courseSectionActivities|first %}
+                {% set activities = [] %}
+                {% set activityType = activity.activityType %}
+                {% for courseSectionActivity in section.courseSectionActivities %}
+                    {% if activityType == courseSectionActivity.activityType %}
+                        {% set activities = activities|merge([courseSectionActivity]) %}
+                        {% set activity = activities|last %}
+                    {% else %}
+                        {% include 'course_info/view/_student_activities_card.html.twig' with {
+                            'activities': activities,
+                            'activityType': activityType
+                        }%}
+                        {% set activityType = courseSectionActivity.activityType %}
+                        {% set activity = courseSectionActivity %}
+                        {% set activities = [activity] %}
+                    {% endif %}
+                {% endfor %}
             </div>
         {% endif %}
     {% endfor %}
