--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,10 +1,10 @@
 
 
-{{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
+{{ form_start(form, {'attr': {'class': 'form-focus', 'id' : 'form-focus-teaching' }}) }}
 {{ form_errors(form) }}
 
 <div class="row">
-    <div class="col-lg-5">
+    <div id="teaching-mode-container" class="col-lg-5" data-type-hybrid="{{ constant('AppBundle\\Constant\\TeachingMode::HYBRID') }}">
         <label class="required font-weight-bold">{{ 'app.presentation.form.teaching_mode.label' | trans }}</label>
         {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
     </div>
@@ -32,9 +32,71 @@
 </div>
 
 <div class="mt-2">
-    {% include 'course_info/presentation/form/_teaching_mode_class.html.twig' %}
     {% include 'course_info/presentation/form/_teaching_mode_distant.html.twig' %}
     {% include 'course_info/presentation/form/_teaching_mode_hybrid.html.twig' %}
+
+{#    ======================================================Teaching======================================================#}
+    {% import 'macro/_course_info.html.twig' as macros %}
+
+    {% set teachingClassForm = [] %}
+    {% set teachingDistantForm = [] %}
+    {% set teachingPrototype = form.teachings.vars.prototype %}
+
+    {% for teachingForm in form.teachings %}
+        {% if teachingForm.vars.data.mode is same as (constant('AppBundle\\Constant\\TeachingMode::IN_CLASS')) %}
+            {% set teachingClassForm = teachingClassForm|merge([teachingForm]) %}
+        {% elseif teachingForm.vars.data.mode is same as (constant('AppBundle\\Constant\\TeachingMode::DIST')) %}
+            {% set teachingDistantForm = teachingDistantForm|merge([teachingForm]) %}
+        {% endif %}
+    {% endfor %}
+    <div class="row">
+        <div class="col-6 teaching-fields-list-container" id="teaching-fields-list-container-{{ constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') }}">
+            <label>{{ form.teachings.vars.label|trans }}</label>
+            {{ _self.printTeachingModeContainer(teachingClassForm, constant('AppBundle\\Constant\\TeachingMode::IN_CLASS'), teachingPrototype ) }}
+        </div>
+        <div class="col-6 teaching-fields-list-container" id="teaching-fields-list-container-{{ constant('AppBundle\\Constant\\TeachingMode::DIST') }}">
+            <label>{{ form.teachings.vars.label|trans }}</label>
+            {{ _self.printTeachingModeContainer(teachingDistantForm, constant('AppBundle\\Constant\\TeachingMode::DIST'), teachingPrototype ) }}
+        </div>
+    </div>
+
+    {% macro printTeachingModeContainer(forms, mode, teachingPrototype) %}
+
+        <div id="teaching-fields-list-{{ mode }}"
+             class="teaching-fields-list"
+             data-prototype="{{ macros.printTeachingRow(teachingPrototype, mode)|e('html_attr') }}"
+             data-widget-tags="{{ '<div></div>'|e }}"
+             >
+            {% for teachingForm in forms %}
+                <div>
+                    {{ macros.printTeachingRow(teachingForm, mode) }}
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+
+                <button type="button"
+                        class="add-another-teaching-widget btn btn-primary mr-0"
+                        data-list-selector="#teaching-fields-list-{{ mode }}"
+                        data-prototype-recipient="#teaching-fields-list-class"
+                        data-mode="{{ mode }}"
+                >
+                    Ajouter un enseignement
+                </button>
+            </div>
+        </div>
+
+
+    {% endmacro %}
+
+
+    {# prevents weird label from showing up in new #}
+    {{ form_widget(form.teachings) }}
+
+    {#    =================================================End Teaching======================================================#}
+
 </div>
 
 <div class="mt-2">
@@ -51,15 +113,25 @@
 <script>
     $(document).ready(function () {
         let $teachingMode = $('#teaching_mode_teachingMode');
-
         /**
          *
          */
         function toggleTeachingMode() {
+
             let mode = $teachingMode.find('input[type="radio"]:checked').val();
+
+            let hybrid = $('#teaching-mode-container').data('type-hybrid');
+
 
             $('.teaching-mode').addClass('d-none');
             $('.teaching-mode-' + mode).removeClass('d-none');
+
+            if (mode === hybrid) {
+                $('.teaching-fields-list-container').removeClass('d-none');
+            } else {
+                $('.teaching-fields-list-container').addClass('d-none');
+                $('#teaching-fields-list-container-' + mode).removeClass('d-none');
+            }
         }
 
         /**
@@ -71,5 +143,43 @@
 
         toggleTeachingMode();
 
-    })
+    });
+
+    //Add a listener on add activity button
+    $(document).off('click', '.add-another-teaching-widget').on('click', '.add-another-teaching-widget', function (e) {
+
+        var mode = $(this).data('mode');
+        var list = $($(this).attr('data-list-selector'));
+        var prototypeRecipient = $($(this).attr('data-prototype-recipient'));
+
+        // Try to find the counter of the list or use the length of the list
+        var counter = $('.teaching-item-collection').length;
+
+        // grab the prototype template
+        var newWidget = prototypeRecipient.attr('data-prototype');
+        // replace the "__name__" used in the id and name of the prototype
+        // with a number that's unique to your emails
+        // end name attribute looks like name="contact[emails][2]"
+        newWidget = newWidget.replace(/__name__/g, counter);
+
+        // Increase the counter
+        counter++;
+        // And store it, the length cannot be used if deleting widgets is allowed
+        $('.teaching-fields-list').data('widget-counter', counter);
+
+        // create a new list element and add it to the list
+        var newElem = $(list.attr('data-widget-tags')).html(newWidget);
+        newElem.find('.teaching-type-mode-input').val(mode);
+        newElem.hide().appendTo(list).slideDown(500, function () {
+
+        });
+
+        $([document.documentElement, document.body]).animate({
+            scrollTop: newElem.offset().top
+        }, 500);
+
+
+    });
+
+
 </script>
