--- a/app/Resources/views/course_info/view/dark_student_closing_remarks.html.twig
+++ b/app/Resources/views/course_info/view/dark_student_closing_remarks.html.twig
@@ -1,7 +1,7 @@
 {% if courseInfo.closingRemarks is not empty %}
     <hr class="bg-dark horizontal-separator">
     <div class="px-4">
-        <h1 id="closing-section" class="text-shadow my-3">{{ 'app.view.student.info.closing_remarks' | trans }}</h1>
+        <h1 id="closing-remarks-section" class="text-shadow my-3">{{ 'app.view.student.info.closing_remarks' | trans }}</h1>
         <div class="row">
             <h5 class="bg-dark border border-danger rounded text-center p-2 w-100">{{ 'app.view.student.info.closing_remarks' | trans | upper }}</h5>
             <div>
