--- a/app/Resources/views/course_info/view/student_sidebar.html.twig
+++ b/app/Resources/views/course_info/view/student_sidebar.html.twig
@@ -7,6 +7,15 @@
                     <p>{{ 'app.view.student.tabs.presentation' | trans }}</p>
                 </a>
             </li>
+            {% if courseInfo.coursePrerequisites is not empty or
+                courseInfo.courseTutoringResources is not empty %}
+                <li class="nav-item has-treeview">
+                    <a class="nav-link menu-tab" href="#prerequisites-section">
+                        <i class="fas fa-key"></i>
+                        <p>{{ 'app.view.student.tabs.prerequisites' | trans }}</p>
+                    </a>
+                </li>
+            {% endif %}
             <li class="nav-item has-treeview">
                 <a class="nav-link menu-tab" href="#objectives-section">
                     <i class="fas fa-bullseye"></i>
@@ -19,29 +28,44 @@
                     <p>{{ 'app.view.student.tabs.activities' | trans }}</p>
                 </a>
             </li>
+            {% if courseInfo.mccAdvice is not null %}
+                <li class="nav-item has-treeview">
+                    <a class="nav-link menu-tab" href="#evaluation-section">
+                        <i class="fas fa-medal"></i>
+                        <p>{{ 'app.view.student.tabs.evaluation' | trans }}</p>
+                    </a>
+                </li>
+            {% endif %}
             {% if courseInfo.educationalResources is not empty or
                 courseInfo.bibliographicResources is not empty or
                 courseInfo.courseResourceEquipments is not empty %}
-            <li class="nav-item has-treeview">
-                <a class="nav-link menu-tab" href="#equipments-section">
-                    <i class="fas fa-tools"></i>
-                    <p>{{ 'app.view.student.tabs.equipments' | trans }}</p>
-                </a>
-            </li>
+                <li class="nav-item has-treeview">
+                    <a class="nav-link menu-tab" href="#equipments-section">
+                        <i class="fas fa-tools"></i>
+                        <p>{{ 'app.view.student.tabs.equipments' | trans }}</p>
+                    </a>
+                </li>
             {% endif %}
             {%
                 if courseInfo.agenda is not empty or
-                courseInfo.organization is not empty or
-                courseInfo.mccAdvice is not null or
-                courseInfo.closingRemarks is not empty or
+                courseInfo.organization is not empty
+            %}
+                <li class="nav-item has-treeview">
+                    <a class="nav-link menu-tab" href="#info-section">
+                        <i class="fas fa-info-circle"></i>
+                        <p>{{ 'app.view.student.tabs.info' | trans }}</p>
+                    </a>
+                </li>
+            {% endif %}
+            {% if courseInfo.closingRemarks is not empty or
                 courseInfo.closingVideo is not empty
             %}
-            <li class="nav-item has-treeview">
-                <a class="nav-link menu-tab" href="#info-section">
-                    <i class="fas fa-info-circle"></i>
-                    <p>{{ 'app.view.student.tabs.info' | trans }}</p>
-                </a>
-            </li>
+                <li class="nav-item has-treeview">
+                    <a class="nav-link menu-tab" href="#closing-remarks-section">
+                        <i class="fas fa-flag-checkered"></i>
+                        <p>{{ 'app.view.student.tabs.closing_remarks' | trans }}</p>
+                    </a>
+                </li>
             {% endif %}
         </ul>
     </nav>
