--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -16,12 +16,9 @@
             {% else %}
                 {% include 'course_info/activities/view/activity_content.html.twig' %}
 
-                <div class="border-top border-primary">
-                    <div class="m-2 rounded border border-primary">
-                        <input class="form-control" type="text" placeholder="{{ 'app.activities.view.carousel.search_activity' | trans }}" aria-label="Search">
-                    </div>
+                <div class="border-top">
 
-                    <div class="card">
+                    <div class="card activity-card">
                         <div class="card-header d-flex p-0">
                             <h3 class="card-title p-3 text-black-50">{{ 'list of activity' | trans }}</h3>
                             <ul id="tab-links" class="nav nav-pills ml-auto p-2">
@@ -33,31 +30,28 @@
                                     {% endfor %}
                                 {% endif %}
                             </ul>
+                            <div class="m-2">
+                                <input id="search-activity-input" class="form-control" type="text" placeholder="{{ 'app.activities.view.carousel.search_activity' | trans }}" aria-label="Search">
+                            </div>
                         </div>
-                        <div class="card-body p-0">
+                        <div class="card-body p-5">
                             <div class="tab-content">
                                 {% for activityType in activityTypes %}
                                     <div id="tab_{{ activityType.id }}" class="tab-pane {% if loop.first %}active{% endif %}">
                                         <div class="activity-carousel">
-                                            <button class="activity-carousel-prev btn btn-link">
-                                                <i class="fas fa-chevron-left"></i>
-                                            </button>
-                                            <div class="activity-carousel-items">
-                                                {% for activity in activities %}
-                                                    {% if activity.activityTypes is not empty and activityType in activity.activityTypes %}
-                                                        <a class="m-auto modal-action"
-                                                           data-action-title="{{ 'app.activities.view.carousel.add_activity' | trans }}"
-                                                           data-action-url="{{ path("app.course_info.section.activity.add", {'id': activeSection.id, 'activityId': activity.id, 'activityTypeId': activityType.id}) }}">
-                                                            <div class="activity-carousel-item text-center d-flex shadow">
-                                                                <div class="m-auto">{{ activity.label }}</div>
+                                            {% for activity in activities %}
+                                                {% if activity.activityTypes is not empty and activityType in activity.activityTypes %}
+"                                                    <div class="modal-action activity-carousel-item"
+                                                       data-action-title="{{ 'app.activities.view.carousel.add_activity' | trans }}"
+                                                       data-action-url="{{ path("app.course_info.section.activity.add", {'id': activeSection.id, 'activityId': activity.id, 'activityTypeId': activityType.id}) }}">
+                                                            <div class="activity-item-content text-center rounded border mb-5">
+                                                                <div class="text p-3">
+                                                                    {{ activity.label }}
+                                                                </div>
                                                             </div>
-                                                        </a>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                            <button class="activity-carousel-next btn btn-link">
-                                                <i class="fas fa-chevron-right"></i>
-                                            </button>
+                                                    </div>"
+                                                {% endif %}
+                                            {% endfor %}
                                         </div>
                                     </div>
                                 {% endfor %}
@@ -73,63 +67,60 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
-        if ($('#activities-list').length)
-        {
-            Syllabus.sortable($('#activities-list'));
-        }
-        Syllabus.sortable($('#sections-list'));
-        /**
-         * calculates the maximum position to which the carousel can translate to the left
-         * @returns {number}
-         */
-        function getTranslationMax()
-        {
-            let $carousel_items_width = $('.activity-carousel-items').width();
-            let translation_max = ($carousel_items_width - ($('#activity-content').width() -100)) * -1;
-            if(translation_max > 0)
-            {
-                translation_max = 0;
-            }
-            return translation_max;
-        }
-        /**
-         * Show/hide the carousel's buttons according to the size of the carousel compared to the size of the window
-         */
-        function toggleCarouselButton()
-        {
-            if(getTranslationMax() < 0)
-            {
-                $('.activity-carousel').removeClass('justify-content-center');
-                $('.activity-carousel-prev').show();
-                $('.activity-carousel-next').show();
-            }else{
-                $('.activity-carousel').addClass('justify-content-center');
-                $('.activity-carousel-prev').hide();
-                $('.activity-carousel-next').hide();
-            }
-        }
 
-        let carouselItems = $('.tab-content > div > div > div > a'),
-            tabsContent = $('.tab-content > div > div > div > a > div > div'),
-            tabContent = [],
-            i,
-            j;
-
-        for (i = 0; i < tabsContent.length; i++) {
-            tabContent[i] = tabsContent.eq(i).text().toLowerCase();
-        }
-        $('input').on('input', function() {
-            let string = $(this).val().toLowerCase();
-            for (j = 0; j < tabsContent.length; j++) {
-                if (tabContent[j].includes(string)) {
-                    carouselItems.eq(j).show();
-                } else {
-                    carouselItems.eq(j).hide();
-                }
-            }
-        });
 
         $(document).ready(function() {
+            /**
+             * Sortable
+             */
+            if ($('#activities-list').length)
+            {
+                Syllabus.sortable($('#activities-list'));
+            }
+
+            Syllabus.sortable($('#sections-list'));
+
+            /**
+             * Init activity carousel
+             */
+
+            $('.activity-carousel').slick(
+                {
+                    slidesToShow: 5,
+                }
+            );
+
+            /**
+             * Activity carousel filtering
+             */
+            $('#search-activity-input').on('keyup', function () {
+
+                let val = $(this).val();
+
+                $('.activity-carousel').slick('slickUnfilter');
+                if (val =='') {
+                    return;
+                }
+
+                $('.activity-carousel').slick('slickFilter', function () {
+                    return $(this).text().toLowerCase().indexOf(val.toLowerCase()) >= 0;
+                });
+            });
+
+
+            //Refresh slick position on shown.bs.ta to avoid issues causing by bootstrap tabs
+            $('.activity-card').find('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+
+                let tab = $($(this).attr('href'));
+                let carousel = tab.find('.activity-carousel');
+
+                carousel.slick('setPosition');
+
+            });
+
+            /**
+             * NC (not communicated)
+             */
             $('#menu-activities').addClass('active');
             $('#menu-activities').addClass('border-bottom-3 border-white');
             $('#content-{{ contentName|default('default') }}').addClass('p-0');
@@ -149,39 +140,6 @@
             });
 
 
-            /**
-             * Init carousel values
-             */
-            let translation = 0;
-            toggleCarouselButton();
-            /**
-             * Show/hide the carousel's buttons when resizing th window
-             */
-            $(window).resize(function () {
-                toggleCarouselButton();
-                $('.activity-carousel-items').css('transform', 'translateX(0px)');
-            });
-            /**
-             * Translate the carousel to the left
-             */
-            $('.activity-carousel-prev').click(function () {
-                translation+= $('#activity-content').width()/2;
-                if(translation > 0) {
-                    translation = 0;
-                }
-                $('.activity-carousel-items').css('transform', 'translateX(' + translation + 'px)');
-            });
-            /**
-             * Translate the carousel to the right
-             */
-            $('.activity-carousel-next').click(function () {
-                let translation_max = getTranslationMax();
-                translation-= $('#activity-content').width()/2;
-                if(translation < translation_max) {
-                    translation = translation_max;
-                }
-                $('.activity-carousel-items').css('transform', 'translateX(' + translation + 'px)');
-            });
         });
     </script>
 {% endblock %}
