fix student view et ajout de la publication d'un suyllabus via la checkbox du dashboard

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -231,6 +231,12 @@ label.toggle-off {
 /*
     Forms
  */
+.publish-checkbox-container {
+    .form-check {
+        padding-left: 0;
+    }
+}
+
 label.required:not(.custom-control-label):before {
     content: "* ";
     color: red;
