--- a/app/Resources/views/course_info/equipment/view/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/view/equipment.html.twig
@@ -12,7 +12,7 @@
                 <tbody>
                 {% for equipment in equipments %}
                     <tr>
-                        <td class="text-left">{{ equipment.label }}</td>
+                        <td class="text-left">{{ equipment.label|humanizeEmptyData }}</td>
                         <td class="text-center">
                             <button type="button"
                                     class="btn btn-link modal-action button p-0"
@@ -61,9 +61,9 @@
                     {% for resourceEquipment in courseInfo.courseResourceEquipments %}
                         <tr class="item-sortable" data-id="{{ resourceEquipment.id }}">
                             <td class="text-left">
-                                <span>{{ resourceEquipment.equipment.label }}</span></br>
+                                <span>{{ resourceEquipment.equipment.label|humanizeEmptyData }}</span></br>
                                 <span class="font-italic"
-                                      style="font-size: 0.9em">{{ resourceEquipment.description }}</span>
+                                      style="font-size: 0.9em">{{ resourceEquipment.description|humanizeEmptyData }}</span>
                             </td>
                             <td class="text-center">
                                 <button type="button"
