Add target _blank for student view link form syllabus dashboard

--- a/app/Resources/assets/scss/_custom_variables.scss
+++ b/app/Resources/assets/scss/_custom_variables.scss
@@ -3,9 +3,9 @@
 */
 
 // SASS options
-$enable-rounded: false;
-$enable-shadows: false;
-$enable-print-styles: false;
+//$enable-rounded: false;
+//$enable-shadows: false;
+//$enable-print-styles: false;
 $enable-responsive-font-sizes: true;
 
 // General settings
