--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -9,7 +9,7 @@
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
-        <h3>{{ courseInfo.title }}</h3>
+        {{ not app.request.query.get('iframe') ? ('<h3>' ~ courseInfo.title ~ '</h3>')|raw }}
     </ul>
 {% endblock %}
 
