Complete right dropdown menu in navbar

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -108,6 +108,10 @@ main > small:first-of-type {
     margin: -.9rem 0;
 }
 
+.navbar-right-menu .dropdown-menu img {
+    max-width: 18px !important;
+}
+
 
 /*
   Loader
