--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
     {% endblock %}
 </head>
 
-<body class="sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open"
+<body class="{% block body_class %}sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open{% endblock %}"
         {% if app.request.get('_route') == "app.course_info.view.student" %}
             data-spy="scroll" data-target="#student-sidebar" data-offset="100"
         {% endif %}
