Handle syllabus title overflow  in navbar

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -112,6 +112,17 @@ main > small:first-of-type {
     max-width: 18px !important;
 }
 
+.syllabus-title {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    word-wrap: break-word;
+
+    & > h3 {
+        display:inline;
+    }
+}
 
 /*
   Loader
