Active menu in syllabus edition sidebar

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -30,7 +30,7 @@
                     <li class="nav-item">
                         <a class="nav-link menu-tab"
                            href="{{ path('app.course_info.permission.index', { 'id': courseInfo.id }) }}"
-                           id="menu-dashboard">
+                           id="menu-permissions">
                             <i class="fas fa-user-shield"></i>
                             <p>{{ 'app.sidebar.permissions' | trans }}</p>
                         </a>
