--- a/app/Resources/views/course_info/prerequisite/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/prerequisite.html.twig
@@ -43,8 +43,7 @@
     {{ parent() }}
     <script>
         $(document).ready(function () {
-            $('#menu-prerequisite').addClass('active');
-            $('#menu-prerequisite').addClass('border-bottom-3 border-white');
+            $('#menu-prerequisites-course').addClass('active');
 
             $(document).on('change', '#btn_tutoring', function () {
                 let checkedValue = $(this).prop('checked');
