--- a/app/Resources/views/course_info/permission/index.html.twig
+++ b/app/Resources/views/course_info/permission/index.html.twig
@@ -12,20 +12,20 @@
                     </button>
                 </div>
                 {{ form_start(form) }}
-                    <div class="modal-body">
-                        <div class="form-group">
-                            {{ form_label(form.user) }}
-                            {{ form_widget(form.user) }}
-                        </div>
-                        <div class="form-group">
-                            {{ form_label(form.permission) }}
-                            {{ form_widget(form.permission) }}
-                        </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        {{ form_label(form.user) }}
+                        {{ form_widget(form.user) }}
                     </div>
-                    <div class="modal-footer justify-content-between">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-                        <button type="submit" class="btn btn-primary">Ajouter</button>
+                    <div class="form-group">
+                        {{ form_label(form.permission) }}
+                        {{ form_widget(form.permission) }}
                     </div>
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                    <button type="submit" class="btn btn-primary">Ajouter</button>
+                </div>
                 {{ form_end(form) }}
             </div>
             <!-- /.modal-content -->
@@ -82,4 +82,14 @@
             {% endif %}
         </div>
     </div>
+{% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $(document).ready(function () {
+            $('#menu-permissions').addClass('active');
+        });
+    </script>
 {% endblock %}
