--- a/app/Resources/views/course_info/permission/index.html.twig
+++ b/app/Resources/views/course_info/permission/index.html.twig
@@ -34,52 +34,56 @@
     </div>
 {% endblock %}
 {% block subContent %}
-    <h4>Liste des permissions</h4>
-    <div class="card">
-        <div class="card-header">
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#modal-add-permission">
-                Ajouter une permission
-            </button>
-        </div>
-        <div class="card-body">
-            {% if courseInfo.coursePermissions.count > 0 %}
-                <table class="table table-bordered table-responsive-sm">
-                    <thead>
-                    <tr>
-                        <th>Nom d'utilisateur</th>
-                        <th>Nom</th>
-                        <th>Prénom</th>
-                        <th>Permission</th>
-                        <th>Modifier/supprimer</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for coursePermission in courseInfo.coursePermissions %}
+    <div class="pt-3">
+        <div class="card">
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>Liste des permissions</h3>
+                    <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#modal-add-permission">
+                        Ajouter une permission
+                    </button>
+                </div>
+            </div>
+            <div class="card-body p-0">
+                {% if courseInfo.coursePermissions.count > 0 %}
+                    <table class="table table-hover table-responsive-sm">
+                        <thead>
                         <tr>
-                            <td>{{ coursePermission.user.userName }}</td>
-                            <td>{{ coursePermission.user.lastname }}</td>
-                            <td>{{ coursePermission.user.firstname }}</td>
-                            <td>{{ ('app.const.permission.' ~ coursePermission.permission)|trans }}</td>
-                            <td>
-                                <button type="button"
-                                        class="btn btn-link modal-action p-0"
-                                        data-action-title="Modifier une compétence"
-                                        data-action-url="{{ path('app.course_info.permission.delete', {'id': coursePermission.id}) }}">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button type="button" class="btn btn-link modal-action p-0"
-                                        data-action-title="Supprimer une compétence"
-                                        data-action-url="{{ path('app.course_info.permission.delete', {'id': coursePermission.id}) }}">
-                                    <i class="fas fa-trash-alt text-danger"></i>
-                                </button>
-                            </td>
+                            <th>Nom d'utilisateur</th>
+                            <th>Nom</th>
+                            <th>Prénom</th>
+                            <th>Permission</th>
+                            <th class="text-right">Modifier/supprimer</th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% else %}
-                <div class="alert alert-info">Aucune permission n'a été enregistrée</div>
-            {% endif %}
+                        </thead>
+                        <tbody>
+                        {% for coursePermission in courseInfo.coursePermissions %}
+                            <tr>
+                                <td>{{ coursePermission.user.userName }}</td>
+                                <td>{{ coursePermission.user.lastname }}</td>
+                                <td>{{ coursePermission.user.firstname }}</td>
+                                <td>{{ ('app.const.permission.' ~ coursePermission.permission)|trans }}</td>
+                                <td class="text-right">
+                                    <button type="button"
+                                            class="btn btn-link modal-action p-0"
+                                            data-action-title="Modifier une compétence"
+                                            data-action-url="{{ path('app.course_info.permission.delete', {'id': coursePermission.id}) }}">
+                                        <i class="fas fa-edit"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-link modal-action p-0"
+                                            data-action-title="Supprimer une compétence"
+                                            data-action-url="{{ path('app.course_info.permission.delete', {'id': coursePermission.id}) }}">
+                                        <i class="fas fa-trash-alt text-danger"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <div class="alert alert-info">Aucune permission n'a été enregistrée</div>
+                {% endif %}
+            </div>
         </div>
     </div>
 {% endblock %}
